<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_map_type"
        android:icon="@drawable/bubble_blue"
        android:showAsAction="ifRoom"
        android:title="@string/string_choose_map_type">
        <menu>
            <item
                android:id="@+id/sub_item_normal_map"
                android:icon="@drawable/bubble_blue"
                android:showAsAction="never"
                android:title="@string/string_map_type_normal"/>
            <item
                android:id="@+id/sub_item_terrain_map"
                android:icon="@drawable/bubble_blue"
                android:showAsAction="never"
                android:title="@string/string_map_type_terrain"/>
            <item
                android:id="@+id/sub_item_hybrid_map"
                android:icon="@drawable/bubble_blue"
                android:showAsAction="never"
                android:title="@string/string_map_type_hybrid"/>
            <item
                android:id="@+id/sub_item_satellite_map"
                android:icon="@drawable/bubble_blue"
                android:showAsAction="never"
                android:title="@string/string_map_type_satellite"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_hide_bar"
        android:icon="@drawable/bubble_green"
        android:showAsAction="ifRoom"
        android:title="@string/hide_action_bar"/>

</menu>